@@ -55,9 +55,6 @@ void SpimView::readSettings()
     st_regWinFontColor = settings.value("FontColor", QColor("black")).value<QColor>();
     st_regWinBackgroundColor = settings.value("BackgroundColor", QColor("white")).value<QColor>();
 
-    //    ui->IntRegDockWidget->restoreGeometry(settings.value("Int Geometry").toByteArray());
-    //    ui->FPRegDockWidget->restoreGeometry(settings.value("FP Geometry").toByteArray());
-
     ui->action_Win_IntRegisters->setChecked(!ui->IntRegDockWidget->isHidden());
     ui->action_Win_FPRegisters->setChecked(!ui->FPRegDockWidget->isHidden());
     settings.endGroup();
@@ -77,7 +74,6 @@ void SpimView::readSettings()
     st_textWinFontColor = settings.value("FontColor", QColor("black")).value<QColor>();
     st_textWinBackgroundColor = settings.value("BackgroundColor", QColor("white")).value<QColor>();
 
-    //    ui->TextSegDockWidget->restoreGeometry(settings.value("Geometry").toByteArray());
     ui->action_Win_TextSegment->setChecked(!ui->TextSegDockWidget->isHidden());
     settings.endGroup();
 
@@ -92,7 +88,6 @@ void SpimView::readSettings()
     st_dataSegmentBase = settings.value("DataSegmentBase", 16).toInt();
     st_dataSegmentBase = setCheckedDataSegmentBase(st_dataSegmentBase);
 
-    //    ui->DataSegDockWidget->restoreGeometry(settings.value("Geometry").toByteArray());
     ui->action_Win_DataSegment->setChecked(!ui->DataSegDockWidget->isHidden());
     settings.endGroup();
 
@@ -142,9 +137,6 @@ void SpimView::writeSettings()
     settings.setValue("Font", st_regWinFont);
     settings.setValue("FontColor", st_regWinFontColor);
     settings.setValue("BackgroundColor", st_regWinBackgroundColor);
-
-    settings.setValue("Int Geometry", ui->IntRegDockWidget->saveGeometry());
-    settings.setValue("FP Geometry", ui->FPRegDockWidget->saveGeometry());
     settings.endGroup();
 
 
@@ -157,8 +149,6 @@ void SpimView::writeSettings()
     settings.setValue("Font", st_textWinFont);
     settings.setValue("FontColor", st_textWinFontColor);
     settings.setValue("BackgroundColor", st_textWinBackgroundColor);
-
-    settings.setValue("Geometry", ui->TextSegDockWidget->saveGeometry());
     settings.endGroup();
 
 
@@ -167,8 +157,6 @@ void SpimView::writeSettings()
     settings.setValue("ShowUserStackSeg", st_showUserStackSegment);
     settings.setValue("ShowKernelDataSeg", st_showKernelDataSegment);
     settings.setValue("DataSegmentBase", st_dataSegmentBase);
-
-    settings.setValue("Geometry", ui->DataSegDockWidget->saveGeometry());
     settings.endGroup();
 
     settings.beginGroup("FileMenu");
